--- a/UltimateTicTacToe/src/GUI/View/TTTView.fxml
+++ b/UltimateTicTacToe/src/GUI/View/TTTView.fxml
@@ -33,7 +33,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <GridPane fx:id="board1" hgap="4.0" vgap="4.0">
+                        <GridPane fx:id="board1" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -56,7 +56,7 @@
                               <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleButtonAction" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane fx:id="board2" hgap="4.0" vgap="4.0" GridPane.columnIndex="1">
+                        <GridPane fx:id="board2" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0" GridPane.columnIndex="1">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -79,7 +79,7 @@
                               <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleButtonAction" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane fx:id="board4" hgap="4.0" vgap="4.0" GridPane.rowIndex="1">
+                        <GridPane fx:id="board4" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0" GridPane.rowIndex="1">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -102,7 +102,7 @@
                               <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleButtonAction" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane fx:id="board5" hgap="4.0" vgap="4.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <GridPane fx:id="board5" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -125,7 +125,7 @@
                               <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleButtonAction" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane fx:id="board7" hgap="4.0" vgap="4.0" GridPane.rowIndex="2">
+                        <GridPane fx:id="board7" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0" GridPane.rowIndex="2">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -148,7 +148,7 @@
                               <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleButtonAction" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane fx:id="board8" hgap="4.0" vgap="4.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <GridPane fx:id="board8" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -171,7 +171,7 @@
                               <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleButtonAction" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane fx:id="board9" hgap="4.0" vgap="4.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                        <GridPane fx:id="board9" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -194,7 +194,7 @@
                               <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleButtonAction" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane fx:id="board6" hgap="4.0" vgap="4.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                        <GridPane fx:id="board6" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -217,7 +217,7 @@
                               <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleButtonAction" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane fx:id="board3" hgap="4.0" vgap="4.0" GridPane.columnIndex="2">
+                        <GridPane fx:id="board3" hgap="4.0" onMouseEntered="#getMacroBoardCoordinates" vgap="4.0" GridPane.columnIndex="2">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
